# nospy

./: .gitignore  LICENSE  README.md  pyproject.toml
sample/: sample1.py  sample10.py  sample11.py  sample2.py  sample3.py  sample4.py  sample5.py  sample6.py  sample7.py  sample8.py  sample9.py
src/nospy/: __init__.py  base58.py  bip0032.py  bip0039.py  bip0340.py  chinese_simplified.py  chinese_traditional.py  czech.py  ed25519.py  english.py  event.py  filter.py  french.py  italian.py  japanese.py  kinds.py  korean.py  message.py  nips.py  nospy.py  portuguese.py  relay.py  spanish.py  wordlist.py
