[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nospy"
version = "0.0.9"
description = "Pythonで作ったNostr用ライブラリです。"
requires-python = ">=3.12"
authors = [{ name = "Tanaka Takashi" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.1",
    "aiosignal==1.4.0",
    "attrs==25.4.0",
    "bech32==1.2.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "pycryptodome==3.23.0",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "yarl==1.22.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # Search in both directories
include = ["nospy"]                     # Include all packages found
exclude = ["tests*","sample"]                # Exclude test directories

[tool.setuptools]